end button alignment solved

--- a/bigbluebutton-html5/imports/ui/newui_components/sidebar_navigation/styles.scss
+++ b/bigbluebutton-html5/imports/ui/newui_components/sidebar_navigation/styles.scss
@@ -10,6 +10,9 @@
   width: 75px;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .LogoBox{
   // padding: 1rem;
@@ -62,8 +65,8 @@
 // }
 .IconOuter{
   // top:6.25rem;
-  height: 100vh;
-  position: absolute;
+  // height: 100vh;
+  // position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
