--- a/bigbluebutton-html5/imports/ui/newui_components/user-list/custom-logo/styles.scss
+++ b/bigbluebutton-html5/imports/ui/newui_components/user-list/custom-logo/styles.scss
@@ -5,7 +5,6 @@
 }
 
 .branding {
-  position: absolute;
   padding:10px var(--sm-padding-x);
   width: 100%;
   height: 90px;
